--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  color: #2B2A29;
+  color: #2b2a29;
+  --light-grey: #8b8785;
+  --light-red: #ef7a7d;
+  --red: #cf3337;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,30 +18,123 @@
 @theme {
   --animate-asideOpening: 1s ease-out asideOpening;
   --font-montserrat: "Montserrat", sans-serif;
-  --drop-shadow-keyboard: 0px 2px 0px rgba(0,0,0,0.1)
+  --drop-shadow-keyboard: 0px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
-html{
+html {
   height: 100%;
 }
 body {
   margin: 0;
   height: 100%;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
-.bg{
+.bg {
   background: url("../media/bg.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
-.scrollHand{
+.scrollHand {
   left: var(--move-x);
 }
-.scrollPanel::-webkit-scrollbar{
+.scrollPanel::-webkit-scrollbar {
   display: none;
 }
-.checkedAfter::after{
+.checkedAfter::after {
   background: url("../media/checkbox.svg");
   background-repeat: no-repeat;
   background-position: center;
+}
+
+.wrapper {
+  max-width: 100%;
+  margin: 20px 0 60px 0;
+}
+.range-slider {
+  --_height: 5px;
+  --_thumb-size: 32px;
+  position: relative;
+  width: 100%;
+  display: grid;
+  margin-bottom: calc(var(--_thumb-size) * -1);
+}
+.track-wrapper {
+  position: relative;
+  z-index: 1;
+  height: var(--_height);
+  margin-bottom: var(--_thumb-size);
+  display: grid;
+  align-items: center;
+  margin: 0 calc(var(--_thumb-size) / 2);
+}
+.track-wrapper .range-between {
+  position: absolute;
+  z-index: 2;
+  left: 0%;
+  right: 0%;
+  top: 0;
+  bottom: 0;
+  border-radius: 5px;
+  background-color: var(--light-red);
+}
+.track-wrapper .thumb {
+  position: absolute;
+  z-index: 3;
+  width: var(--_thumb-size);
+  height: var(--_thumb-size);
+  background-color: var(--light-red);
+  border-radius: 50%;
+  transition: box-shadow 0.3s ease-in-out;
+}
+.track-wrapper .thumb.left {
+  left: 0%;
+  background-color: #cf3337;
+  transform: translate(calc(var(--_thumb-size) / -2), 0px);
+}
+.track-wrapper .thumb.right {
+  right: 0%;
+  background-color: #cf3337;
+  transform: translate(calc(var(--_thumb-size) / 2), 0px);
+}
+.track-wrapper .track {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius: 5px;
+  background-color: var(--light-grey);
+}
+
+input[type="range"] {
+  position: absolute;
+  pointer-events: none;
+  -webkit-appearance: none;
+  z-index: 2;
+  height: var(--_height);
+  width: 100%;
+  opacity: 0;
+  cursor: pointer;
+  bottom: 0;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  pointer-events: all;
+  width: var(--_thumb-size);
+  height: var(--_thumb-size);
+  border-radius: 0;
+  border: 0 none;
+  background-color: var(--green);
+  -webkit-appearance: none;
+}
+
+input[type="range"]::-moz-range-thumb {
+  pointer-events: all;
+  width: var(--_thumb-size);
+  height: var(--_thumb-size);
+  border-radius: 0;
+  border: 0 none;
+  background-color: var(--green);
+  -webkit-appearance: none;
 }
